last changes Sprint1